--- a/encyclopedia/templates/encyclopedia/new_page.html
+++ b/encyclopedia/templates/encyclopedia/new_page.html
@@ -8,6 +8,7 @@ Encyclopedia
 
 <div>
     <h1>New Page</h1>
+    <p>Use markdown syntax.</p>
 
     {% if message %}
     <div class="alert alert-danger" style="width:80%">
@@ -18,9 +19,9 @@ Encyclopedia
     <form action="{% url 'new_page' %}" method="POST">
 
         {% csrf_token %}
-        <input type="text" name="title" placeholder="Title..." autofocus>
+        <input class=type="text" name="title" placeholder="Title..." autofocus>
         <div>
-            <textarea name="content" placeholder="Entry content..." rows="10"></textarea>
+            <textarea class="text-editor" name="content" placeholder="Entry content..." rows="10"></textarea>
         </div>
         <input class="btn btn-dark" type="submit" value="Save">
     </form>
