--- a/encyclopedia/static/encyclopedia/styles.css
+++ b/encyclopedia/static/encyclopedia/styles.css
@@ -1,6 +1,7 @@
 body {
     margin: 0;
     background-color: white;
+    width: 98%;
 }
 
 code {
@@ -13,9 +14,10 @@ h1 {
 }
 
 textarea {
-    height: 90vh;
     width: 80%;
+    margin-top: 10px;
 }
+
 
 .main {
     padding: 10px;
@@ -35,4 +37,13 @@ textarea {
 
 .sidebar h2 {
     margin-top: 5px;
+}
+
+.logo{
+    width: 150px;
+    height: 150px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 20px;
+
 }
