--- a/encyclopedia/templates/encyclopedia/entry.html
+++ b/encyclopedia/templates/encyclopedia/entry.html
@@ -12,7 +12,7 @@ Encyclopedia
 
 <form action="" method="POST">
     {% csrf_token %}
-    <input type="submit" value="edit">
+    <input class="btn btn-dark" type="submit" value="Edit">
 </form>
 {% endif %}
 
