--- a/encyclopedia/templates/encyclopedia/layout.html
+++ b/encyclopedia/templates/encyclopedia/layout.html
@@ -11,6 +11,7 @@
     <body>
         <div class="row">
             <div class="sidebar col-lg-2 col-md-3">
+                <div class="logo"><img class="logo" src="{% static 'encyclopedia/logo.png' %}"></div>
                 <h2>Wiki</h2>
                 <form action="{% url 'search' %}" method="POST"> 
                     {% csrf_token %}
