--- a/encyclopedia/templates/encyclopedia/new_page.html
+++ b/encyclopedia/templates/encyclopedia/new_page.html
@@ -19,7 +19,7 @@ Encyclopedia
     <form action="{% url 'new_page' %}" method="POST">
 
         {% csrf_token %}
-        <input class="text" name="title" placeholder="Title..." autofocus>
+        <input class="text" name="title" placeholder="Title..." autofocus autocomplete="off">
         <div>
             <textarea class="text-editor" name="content" placeholder="Entry content..." rows="10"></textarea>
         </div>
